Добавил jwt, изменил swagger, и по мелочи там сям
