# pkg/handlers/handlers.go
@@ -1,13 +1,16 @@
 package handlers
 
 import (
+	"blog/pkg/auth"
 	"blog/pkg/dbwork"
 	"blog/pkg/models"
 	"encoding/json"
 	"io"
 	"log"
 	"net/http"
+	"os"
 	"strconv"
+	"time"
 
 	"github.com/gorilla/mux"
 )
@@ -24,6 +27,13 @@ func StartDB() error {
 
 	DB.Run()
 	return nil
+}
+
+// Стандартная ошибка API
+// swagger:model
+type APIError struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
 }
 
 // swagger:route POST /article article createArticle
@@ -46,37 +56,34 @@ func StartDB() error {
 //     schema:
 //     $ref: "#/definitions/Request"
 func CreateArticle(rw http.ResponseWriter, r *http.Request) {
-	data, err := io.ReadAll(r.Body)
-	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+	login, ok := r.Context().Value("login").(string)
+	if !ok {
+		http.Error(rw, "Вы не авторизованы", http.StatusUnauthorized)
 		return
 	}
 
-	request := models.Request{}
-	err = json.Unmarshal(data, &request)
+	data, err := io.ReadAll(r.Body)
+	if err != nil {
+		log.Println(err)
+		http.Error(rw, "Ошибка чтения запроса", http.StatusInternalServerError)
+		return
+	}
+
+	article := models.Article{}
+	err = json.Unmarshal(data, &article)
 	if err != nil {
 		log.Println(err)
 		http.Error(rw, err.Error(), http.StatusBadRequest)
 		return
 	}
 
-	verify, err := DB.VerifyPassword(request.User.Login, request.User.Password)
+	ch := make(chan error, 1)
+	DB.CreateArticle(login, article.Text, ch)
+	err = <-ch
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
-		return
+		http.Error(rw, "Ошибка создания записи", http.StatusInternalServerError)
 	}
-	if verify {
-		ch := make(chan error, 1)
-		DB.CreateArticle(request.User.Login, request.Article.Text, ch)
-		err := <-ch
-		if err != nil {
-			http.Error(rw, "Ошибка создания записи", http.StatusInternalServerError)
-			return
-		}
-		rw.WriteHeader(http.StatusCreated)
-		return
-	}
-	rw.WriteHeader(http.StatusUnauthorized)
+	rw.WriteHeader(http.StatusCreated)
 }
 
 // swagger:route DELETE /article/{id} article deleteArticle
@@ -106,6 +113,11 @@ func CreateArticle(rw http.ResponseWriter, r *http.Request) {
 //     schema:
 //     $ref: "#/definitions/Request"
 func DeleteArticle(rw http.ResponseWriter, r *http.Request) {
+	login, ok := r.Context().Value("login").(string)
+	if !ok {
+		http.Error(rw, "Вы не авторизованы", http.StatusUnauthorized)
+		return
+	}
 	vars := mux.Vars(r)
 	strId := vars["id"]
 	id, err := strconv.Atoi(strId)
@@ -114,50 +126,25 @@ func DeleteArticle(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	data, err := io.ReadAll(r.Body)
+	ok, err = DB.VerifyArticleToUser(id, login)
 	if err != nil {
 		http.Error(rw, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
-	request := models.Request{}
-	err = json.Unmarshal(data, &request)
-	if err != nil {
-		log.Println(err)
-		http.Error(rw, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	log.Println(request)
-
-	verify, err := DB.VerifyPassword(request.User.Login, request.User.Password)
-	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	ok, err := DB.VerifyArticleToUser(id, request.User.Login)
-	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if verify && ok {
-		ch := make(chan error, 1)
-		DB.DeleteArticle(id, ch)
-		err = <-ch
-		if err != nil {
-			http.Error(rw, "Ошибка удаления записи", http.StatusInternalServerError)
-			return
-		}
-		rw.WriteHeader(http.StatusCreated)
-		return
-	}
 	if !ok {
-		http.Error(rw, "Вы не можете изменять не свои записи.", http.StatusInternalServerError)
+		http.Error(rw, "Вы не можете изменять не свои записи", http.StatusBadRequest)
 		return
 	}
-	rw.WriteHeader(http.StatusUnauthorized)
+
+	ch := make(chan error, 1)
+	DB.DeleteArticle(id, ch)
+	err = <-ch
+	if err != nil {
+		http.Error(rw, "Ошибка удаления записи", http.StatusInternalServerError)
+		return
+	}
+	rw.WriteHeader(http.StatusOK)
 }
 
 // swagger:route POST /register user register
@@ -184,14 +171,33 @@ func Register(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	request := models.Request{}
-	err = json.Unmarshal(data, &request)
+	user := models.User{}
+	err = json.Unmarshal(data, &user)
 	if err != nil {
 		http.Error(rw, err.Error(), http.StatusInternalServerError)
 		return
 	}
+
+	if len(user.Login) < 5 || len(user.Password) < 8 {
+		http.Error(
+			rw,
+			"Логин не может быть короче 5 символов, а пароль короче 8 символов",
+			http.StatusBadRequest,
+		)
+		return
+	}
+
+	if len(user.Login) >= 16 || len(user.Password) >= 20 {
+		http.Error(
+			rw,
+			"Логин не может быть длиннее 16 символов, а пороль длинее 20 символов",
+			http.StatusBadRequest,
+		)
+		return
+	}
+
 	ch := make(chan error, 1)
-	DB.CreateUser(request.User.Login, request.User.Password, ch)
+	DB.CreateUser(user.Login, user.Password, ch)
 	err = <-ch
 	if err != nil {
 		http.Error(rw, err.Error(), http.StatusInternalServerError)
@@ -223,20 +229,20 @@ func GetArticle(rw http.ResponseWriter, r *http.Request) {
 	strId := vars["id"]
 	id, err := strconv.Atoi(strId)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Данные не найдены", http.StatusNotFound)
 		return
 	}
 
 	articles, err := DB.GetArticle(id)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка поиска данных", http.StatusInternalServerError)
 		return
 	}
 
 	encoder := json.NewEncoder(rw)
 	err = encoder.Encode(articles)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка отправки данных", http.StatusInternalServerError)
 		return
 	}
 }
@@ -258,14 +264,14 @@ type ArticleResponse struct {
 func GetAllArticle(rw http.ResponseWriter, r *http.Request) {
 	article, err := DB.GetAllArticle()
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка поиска данных", http.StatusInternalServerError)
 		return
 	}
 
 	encoder := json.NewEncoder(rw)
 	err = encoder.Encode(article)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка отправки данных", http.StatusInternalServerError)
 		return
 	}
 }
@@ -277,67 +283,117 @@ type ArticlesResponse struct {
 }
 
 // swagger:route PUT /article article updateArticle
-//
-// # Обновление статьи
-//
-// # Требует аутентификации и проверки владельца статьи
-//
+// Обновление существующей статьи
+// Требует аутентификации и проверки владельца статьи
 // responses:
 //
-//	200: description:Статья успешно обновлена
-//	400: description:Неверный формат запроса
-//	401: description:Неавторизованный доступ
-//	403: description:Запрещено (не владелец статьи)
-//	500: description:Ошибка сервера
+//	200: description: Статья успешно обновлена
+//	400: description: Неверный формат запроса
+//	401: description: Неавторизованный доступ
+//	403: description: Запрещено (не владелец статьи)
+//	500: description: Ошибка сервера
 //
 // Параметры:
-//   - name: body
+//   - name: articleData
 //     in: body
 //     required: true
 //     schema:
+//     $ref: "#/definitions/Article"
 func UpdateArticle(rw http.ResponseWriter, r *http.Request) {
+	login, ok := r.Context().Value("login").(string)
+	if !ok {
+		http.Error(rw, "Вы не авторизованы", http.StatusUnauthorized)
+		return
+	}
+
 	data, err := io.ReadAll(r.Body)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка запроса к серверу", http.StatusInternalServerError)
 		return
 	}
 
-	request := models.Request{}
-	err = json.Unmarshal(data, &request)
+	article := models.Article{}
+	err = json.Unmarshal(data, &article)
 	if err != nil {
 		log.Println(err)
-		http.Error(rw, err.Error(), http.StatusBadRequest)
+		http.Error(rw, "Данные в запросе не найдены", http.StatusBadRequest)
 		return
 	}
 
-	log.Println(request)
-
-	verify, err := DB.VerifyPassword(request.User.Login, request.User.Password)
+	ok, err = DB.VerifyArticleToUser(article.ID, login)
 	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
+		http.Error(rw, "Ошибка запроса", http.StatusInternalServerError)
 		return
 	}
 
-	ok, err := DB.VerifyArticleToUser(request.Article.ID, request.User.Login)
-	if err != nil {
-		http.Error(rw, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if verify && ok {
-		ch := make(chan error, 1)
-		DB.UpdateArticle(request.Article.ID, request.Article.Text, ch)
-		err = <-ch
-		if err != nil {
-			http.Error(rw, "Ошибка обновления записи", http.StatusInternalServerError)
-			return
-		}
-		rw.WriteHeader(http.StatusCreated)
-		return
-	}
 	if !ok {
 		http.Error(rw, "Вы не можете изменять не свои записи.", http.StatusInternalServerError)
 		return
 	}
-	rw.WriteHeader(http.StatusUnauthorized)
+
+	ch := make(chan error, 1)
+	DB.UpdateArticle(article.ID, article.Text, ch)
+	err = <-ch
+	if err != nil {
+		http.Error(rw, "Ошибка обновления записи", http.StatusInternalServerError)
+		return
+	}
+	rw.WriteHeader(http.StatusCreated)
+}
+
+// swagger:route POST /login user login
+// Аутентификация пользователя и получение JWT токена
+// responses:
+//
+//	200: description: Успешная аутентификация
+//	400: description: Неверный формат запроса
+//	401: description: Неверные учетные данные
+//	500: description: Ошибка сервера
+//
+// Параметры:
+//   - name: credentials
+//     in: body
+//     required: true
+//     schema:
+//     $ref: "#/definitions/User"
+func LoginHandler(rw http.ResponseWriter, r *http.Request) {
+	data, err := io.ReadAll(r.Body)
+	if err != nil {
+		http.Error(rw, "Ошибка запроса к серверу", http.StatusBadRequest)
+		return
+	}
+
+	loginRequest := models.User{}
+
+	if err := json.Unmarshal(data, &loginRequest); err != nil {
+		http.Error(rw, "Данные в запросе не найдены", http.StatusBadRequest)
+		return
+	}
+
+	verify, err := DB.VerifyPassword(loginRequest.Login, loginRequest.Password)
+	if err != nil || !verify {
+		http.Error(rw, "Не верны пароль или логин", http.StatusUnauthorized)
+		return
+	}
+
+	configFile, _ := os.ReadFile("JWTSecret.json")
+	var config struct {
+		JWTSecret          string `json:"jwt_secret"`
+		JWTExpirationHours int    `json:"jwt_expiration_hours"`
+	}
+	json.Unmarshal(configFile, &config)
+
+	token, err := auth.GenerateJWT(
+		loginRequest.Login,
+		config.JWTSecret,
+		time.Duration(config.JWTExpirationHours)*time.Hour,
+	)
+	if err != nil {
+		http.Error(rw, "Ошибка генерации токена", http.StatusInternalServerError)
+		return
+	}
+
+	json.NewEncoder(rw).Encode(map[string]string{
+		"token": token,
+	})
 }
